--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayo's Style Guide</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="resources/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Caladea:ital,wght@0,400;0,700;1,400;1,700&family=Merienda:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -12,27 +12,35 @@
 
 </head>
 <body>
-        <!--Header Section-->
-        <header>
-            <h1>The Retro Style</h1>
-            <p>-Ayo's Style Guide-</p>
-        </header>
-        <!--Introduction section-->
+    <!--Header Section-->
+    <section class="header">
+        <h1>The Retro Style</h1>
+        <h4>Ayo's Style Guide</p>
+    </section>
+    <!--Introduction section-->
+    <section class="introduction">
         <h2>Introduction</h2>
         <div class="retroimg">
             <img src="retro.jpg" alt="Retro style">
         </div>
-        <section class="introduction">
-            <p>Welcome to Ayo' aesthetic style guide – a homage to retro aesthetics! Immerse yourself in my curated fusion of vibrant colors, nostalgic fonts, and classic typography. Join me as we explore  my design element, where every pixel echoes the charm of bygone eras. Let's celebrate the timeless allure of retro style in a contemporary digital space. Welcome to the past, reimagined for the present!</p>
-        </section>
-        <!--Navigation Section-->
-        <nav>
-            <ul>
-                <li><a href="#color">Colors</a></li>
-                <li><a href="#font">Fonts</a></li>
-                <li><a href="#aesthetic">Aesthetics</a></li>
-            </ul>
-        </nav>
+        <p>Welcome to Ayo' aesthetic style guide – a homage to retro aesthetics! Immerse yourself in my curated fusion of vibrant colors, nostalgic fonts, and classic typography. 
+            Join me as we explore  my design element, 
+            where every pixel echoes the charm of bygone eras. 
+            Let's celebrate the timeless allure of retro style 
+            in a contemporary digital space. Welcome to the past, 
+            reimagined for the present!
+        </p>
+    </section>
+
+    <!--Navigation Section-->
+    <nav>
+        <ul>
+            <li><a href="#color">Colors</a></li>
+            <li><a href="#font">Fonts</a></li>
+            <li><a href="#aesthetic">Aesthetics</a></li>
+        </ul>
+    </nav>
+    
     <!--Color Section-->
     <section class="color-section">
         <h3>Colors</h3>
